--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-    background:linear-gradient(orange, yellow, cyan);
+    background:linear-gradient(orange, yellow,rgb(87, 163, 229), cyan);
     display: flex;
     width: 100%;
     align-items: center;
@@ -7,22 +7,30 @@ html{
 }
 #seal {
     width:10%;
-    padding-right: 1500px;
+    padding-right: 30px; 
 }
 #words{
     width: 10%;
+    position: left;
+    /* padding-left: 10px;
+    padding-top: 20px; */
+    margin-block: 0px;
  }
+tr:hover{
+    background-color:rgb(26, 186, 127);
+}
 
 
-
-table, th,{
-    border: 1px solid black;
+table,th,tr{
+    border: solid black;
+    position:center;
     
   }
 
   td{
     border: 1px solid black;
     font-size: x-large;
+    
   }
   
   h1 {
@@ -32,12 +40,16 @@ table, th,{
 
   h2{
       color:rgb(26, 186, 127);
-      top: -100px;
+      font-size: xx-large;
+      margin-top: -20px;
+      padding-right: 10px;
+      position:relative;
   }
 
   body {
     color:black;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width:100%
     margin: 20px;
     text-align: center;
     position: center;
