--- a/style.css
+++ b/style.css
@@ -1,57 +1,62 @@
 html{
     background:linear-gradient(orange, yellow,rgb(87, 163, 229), cyan);
-    display: flex;
     width: 100%;
-    align-items: center;
-    position: center;
+    position: relative;
+    margin: 0 auto;    
+#map {
+    width: 40%;
+    position:relative;
+    top:-500px;
+    right:-55%;
+}
+form{
+    position: relative;
+    width:71vw;
 }
 #seal {
+    top:20%;
+    left: 40%;
+    position:relative;
     width:10%;
-    padding-right: 30px; 
 }
 #words{
-    width: 10%;
-    position: left;
-    /* padding-left: 10px;
-    padding-top: 20px; */
-    margin-block: 0px;
+    top: -350px;
+    position:relative;
+    width:10%;
  }
 tr:hover{
     background-color:rgb(26, 186, 127);
 }
 
-
-table,th,tr{
+table,th,tr, td{
     border: solid black;
-    position:center;
-    
-  }
+    font-size: x-large;
+    position: relative;
+    top:-100px;
+}
 
   td{
     border: 1px solid black;
-    font-size: x-large;
     
   }
   
   h1 {
       color:rgb(26, 186, 127);
-      
+      position: relative;
+      right:-38%;
+      top:-50;
   }
 
   h2{
       color:rgb(26, 186, 127);
       font-size: xx-large;
-      margin-top: -20px;
-      padding-right: 10px;
-      position:relative;
+      position: relative;
+      
   }
 
   body {
     color:black;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width:100%
-    margin: 20px;
-    text-align: center;
-    position: center;
-}
+  }
 
+ 
