--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ table,th,tr{
   }
   #words{
     width:100%;
-    grid-column-start: 6;
+    grid-column-start: 5;
     grid-column-end: 8;
     grid-row-start: 4;
     grid-row-end: 7;
@@ -93,10 +93,12 @@ table,th,tr{
   h1{
     color:rgb(10, 115, 77);
     width: 100%;
-    grid-column-start: 5;
+    grid-column-start: 3;
     grid-column-end: 9;
     grid-row-start: 3;
     grid-row-end: 3;
+    font-size: xxx-large;
+    font-style:;
   }
   h2 {
     color:rgb(10, 115, 77);
@@ -105,8 +107,7 @@ table,th,tr{
     grid-column-end: 9;
     grid-row-start: 7;
     grid-row-end: 8;
-    font-size: xx-large;
-
+    font-size: x-large;
   }
   
   #map {
@@ -135,4 +136,6 @@ table,th,tr{
   tr:hover {
     background-color: rgb(26, 186, 127);
   }
-  
+  .highlight {
+  background-color: yellow;
+}
