--- a/style.css
+++ b/style.css
@@ -1,74 +1,8 @@
-/* html{
-    background:linear-gradient(orange, yellow,rgb(87, 163, 229), cyan);
-    width: 100%;
-    position: relative;
-    margin: 0 auto;    
-#map {
-    width: 40%;
-    position:absolute;
-    top:110px;
-    right:0px;
-}
-form{
-    position: absolute;
-    top: 90px;
-    right: -798px;
-    width:71vw;
-}
-#seal {
-    top:20%;
-    left: 40%;
-    position:relative;
-    width:10%;
-}
-#words{
-    top: -350px;
-    position:relative;
-    width:10%;
- }
- tr:hover{
-    background-color:rgb(26, 186, 127);
-}
-
-table,th,tr{
-    border: solid black;
-}
-
-  td{
-    border: 1px solid black;
-    font-size: x-large;
-  };
-  
-  h1 {
-      color:rgb(26, 186, 127);
-      position: relative;
-      left: 500px;
-      top:-50;
-  }
-
-  h2{
-      color:rgb(26, 186, 127);
-      font-size: xx-large;
-      position: relative;
-      left:500px;
-  }
-
-  body {
-    color:black;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    position: relative;
-    width: 100%;
-    
-  }
-
-  */
   body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(orange, yellow, rgb(87, 163, 229), cyan);
-    
-  }
-  
+    background: linear-gradient(to bottom right, orange, yellow, rgb(87, 163, 229), cyan);
+   }
   .grid-container {
     display: grid;
     grid-template-columns: repeat(13, 1fr);
@@ -76,11 +10,11 @@ table,th,tr{
     padding: 5px;
   }
   #words{
-    width:100%;
-    grid-column-start: 5;
+    width:75%;
+    grid-column-start: 3;
     grid-column-end: 8;
     grid-row-start: 4;
-    grid-row-end: 7;
+    grid-row-end: 4;
   }
   #seal {
     width: 100%;
@@ -89,50 +23,43 @@ table,th,tr{
     grid-row-start: 1;
     grid-row-end: 1;
   }
-  
   h1{
     color:rgb(10, 115, 77);
     width: 100%;
     grid-column-start: 3;
     grid-column-end: 9;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
     font-size: xxx-large;
     font-style:;
   }
   h2 {
     color:rgb(10, 115, 77);
     width: 100%;
-    grid-column-start: 5;
+    grid-column-start: 3;
     grid-column-end: 9;
     grid-row-start: 7;
     grid-row-end: 8;
     font-size: x-large;
   }
-  
   #map {
     grid-column-start:9;
     grid-column-end: 14;
     grid-row-start: 1;
-    grid-row-end: 8;
+    grid-row-end: 6;
   }
-  
   form {
     grid-column: span 3;
   }
-  
   #topSpotsTable {
-    margin: 20px;
     grid-column: span 13;
     width: 100%;
   }
-  
   th, td {
     border: 1px solid black;
     padding: 10px;
     text-align: left;
   }
-  
   tr:hover {
     background-color: rgb(26, 186, 127);
   }
